[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["mrgo1d <alejandroustin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
